--- a/src/main/resources/pAccueil.fxml
+++ b/src/main/resources/pAccueil.fxml
@@ -40,8 +40,8 @@
             </MenuBar>
             <HBox spacing="8.0">
                <children>
-                  <TextField />
-                  <Button mnemonicParsing="false" text="Rechercher" />
+                  <TextField fx:id="inputRechercher" />
+                  <Button fx:id="rechercher" mnemonicParsing="false" onAction="#actionRechercher" text="Rechercher" />
                </children>
                <VBox.margin>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
