--- a/src/main/resources/addOeuvre.fxml
+++ b/src/main/resources/addOeuvre.fxml
@@ -2,15 +2,15 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane hbarPolicy="ALWAYS" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="400.0" vbarPolicy="ALWAYS" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddOeuvreController">
+<ScrollPane hbarPolicy="ALWAYS" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="400.0" vbarPolicy="ALWAYS" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddOeuvreController">
    <content>
       <VBox BorderPane.alignment="CENTER">
          <children>
@@ -35,11 +35,11 @@
                   <Insets left="20.0" right="20.0" />
                </VBox.margin>
             </Label>
-            <ListView fx:id="listViewCat" prefHeight="26.0" prefWidth="414.0">
+            <ChoiceBox fx:id="listViewCat" onMouseClicked="#handleCatSelection" prefHeight="26.0" prefWidth="414.0">
                <VBox.margin>
                   <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
                </VBox.margin>
-            </ListView>
+            </ChoiceBox>
             <Label text="Date d'acquisition">
                <padding>
                   <Insets left="5.0" right="5.0" />
@@ -142,7 +142,7 @@
                   <Insets left="20.0" />
                </VBox.margin>
             </TextArea>
-            <Label layoutX="30.0" layoutY="218.0" text="Plateforme">
+            <Label layoutX="30.0" layoutY="218.0" text="Plateforme" visible="false" fx:id="labelPlateforme" >
                <VBox.margin>
                   <Insets left="20.0" right="20.0" />
                </VBox.margin>
