--- a/src/main/resources/addOeuvre.fxml
+++ b/src/main/resources/addOeuvre.fxml
@@ -35,7 +35,7 @@
                   <Insets left="20.0" right="20.0" />
                </VBox.margin>
             </Label>
-            <ChoiceBox fx:id="listViewCat" onMouseClicked="#handleCatSelection" prefHeight="26.0" prefWidth="414.0">
+            <ChoiceBox fx:id="listViewCat" prefHeight="26.0" prefWidth="414.0">
                <VBox.margin>
                   <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
                </VBox.margin>
@@ -142,7 +142,7 @@
                   <Insets left="20.0" />
                </VBox.margin>
             </TextArea>
-            <Label layoutX="30.0" layoutY="218.0" text="Plateforme" visible="false" fx:id="labelPlateforme" >
+            <Label fx:id="labelPlateforme" layoutX="30.0" layoutY="218.0" text="Plateforme" visible="false">
                <VBox.margin>
                   <Insets left="20.0" right="20.0" />
                </VBox.margin>
