--- a/src/main/resources/rechercheAvancee.fxml
+++ b/src/main/resources/rechercheAvancee.fxml
@@ -4,13 +4,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane hbarPolicy="ALWAYS" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="400.0" vbarPolicy="ALWAYS" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RechercheAvanceeController">
+<ScrollPane hbarPolicy="ALWAYS" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="1000.0" prefWidth="358.0" vbarPolicy="ALWAYS" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RechercheAvanceeController">
    <content>
       <BorderPane>
          <left>
@@ -42,6 +43,41 @@
                                  </children>
                               </HBox>
                               <Button fx:id="btnSearchByGenre" layoutX="219.0" layoutY="14.0" mnemonicParsing="false" onAction="#actionSearchByGenre" text="Rechercher" />
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
+                  <TitledPane animated="false" text="Recherche par note">
+                     <content>
+                        <AnchorPane>
+                           <children>
+                              <HBox layoutX="7.0" layoutY="6.0" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label prefHeight="16.0" prefWidth="85.0" text="Note" />
+                                    <ListView fx:id="listViewNote" prefHeight="100.0" prefWidth="140.0" />
+                                 </children>
+                              </HBox>
+                              <Button fx:id="btnSearchByNote" layoutX="219.0" layoutY="14.0" mnemonicParsing="false" onAction="#actionSearchByNote" text="Rechercher" />
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
+                  <TitledPane animated="false" text="Recherche par genre">
+                     <content>
+                        <AnchorPane>
+                           <children>
+                              <HBox layoutX="7.0" layoutY="6.0" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label prefHeight="16.0" prefWidth="85.0" text="Genre" />
+                                    <VBox prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <TextField fx:id="inputBegin" />
+                                          <TextField fx:id="inputEnd" />
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </HBox>
+                              <Button fx:id="btnSearchByDate" layoutX="219.0" layoutY="14.0" mnemonicParsing="false" onAction="#actionSearchByDate" text="Rechercher" />
                            </children>
                         </AnchorPane>
                      </content>
