--- a/src/main/resources/addOeuvre.fxml
+++ b/src/main/resources/addOeuvre.fxml
@@ -5,159 +5,208 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane hbarPolicy="ALWAYS" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="400.0" vbarPolicy="ALWAYS" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddOeuvreController">
+<ScrollPane hbarPolicy="ALWAYS" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="400.0" prefWidth="800.0" vbarPolicy="ALWAYS" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddOeuvreController">
    <content>
-      <VBox BorderPane.alignment="CENTER">
+      <HBox prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Titre">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </Label>
-            <TextField fx:id="titreInput">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
-               </VBox.margin>
-            </TextField>
-            <Label text="Catégorie">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </Label>
-            <ChoiceBox fx:id="listViewCat" prefHeight="26.0" prefWidth="414.0">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
-               </VBox.margin>
-            </ChoiceBox>
-            <Label text="Date d'acquisition">
-               <padding>
-                  <Insets left="5.0" right="5.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </Label>
-            <TextField fx:id="dateAcquisitionInput">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
-               </VBox.margin>
-            </TextField>
-            <Label text="Date de sortie">
-               <padding>
-                  <Insets left="5.0" right="5.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </Label>
-            <TextField fx:id="dateSortieInput">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
-               </VBox.margin>
-            </TextField>
-            <Label text="Auteur">
-               <padding>
-                  <Insets left="5.0" right="5.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </Label>
-            <TextField fx:id="auteurInput">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
-               </VBox.margin>
-            </TextField>
-            <Label text="Genre">
-               <padding>
-                  <Insets left="5.0" right="5.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </Label>
-            <TextField fx:id="genreInput">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
-               </VBox.margin>
-            </TextField>
-            <Label text="Langue">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </Label>
-            <TextField fx:id="langueInput">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </TextField>
-            <Label text="Origine">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </Label>
-            <TextField fx:id="origineInput">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </TextField>
-            <Label text="Support">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </Label>
-            <TextField fx:id="supportInput">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </TextField>
-            <Label text="Note">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </Label>
-            <TextField fx:id="noteInput">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </TextField>
-            <Label text="Comment">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </Label>
-            <TextArea fx:id="commentInput" prefHeight="104.0" prefWidth="434.0">
-               <VBox.margin>
-                  <Insets left="20.0" />
-               </VBox.margin>
-            </TextArea>
-            <Label fx:id="labelPlateforme" layoutX="30.0" layoutY="218.0" text="Plateforme" visible="false">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </Label>
-            <TextField fx:id="plateformeInput" layoutX="10.0" layoutY="187.0" prefHeight="31.0" prefWidth="361.0">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="20.0" right="30.0" top="5.0" />
-               </VBox.margin>
-            </TextField>
-						<Button fx:id="valider" layoutX="30.0" layoutY="218.0" onAction="#submitOeuvre" text="Valider">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </Button>
+            <VBox prefWidth="600.0">
+               <children>
+                  <Label text="Titre">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="titreInput">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label text="Catégorie">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <ChoiceBox fx:id="listViewCat" prefHeight="26.0" prefWidth="414.0">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+                     </VBox.margin>
+                  </ChoiceBox>
+                  <Label text="Date d'acquisition">
+                     <padding>
+                        <Insets left="5.0" right="5.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="dateAcquisitionInput">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label text="Date de sortie">
+                     <padding>
+                        <Insets left="5.0" right="5.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="dateSortieInput">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label text="Auteur">
+                     <padding>
+                        <Insets left="5.0" right="5.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="auteurInput">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label text="Genre">
+                     <padding>
+                        <Insets left="5.0" right="5.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="genreInput">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label text="Langue">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="langueInput">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label text="Origine">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="origineInput">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label text="Support">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="supportInput">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label text="Note">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="noteInput">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label text="Comment">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextArea fx:id="commentInput" prefHeight="104.0" prefWidth="434.0">
+                     <VBox.margin>
+                        <Insets left="20.0" />
+                     </VBox.margin>
+                  </TextArea>
+                  <Label fx:id="labelPlateforme" layoutX="30.0" layoutY="218.0" text="Plateforme" visible="false">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="plateformeInput" layoutX="10.0" layoutY="187.0" prefHeight="31.0" prefWidth="361.0">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="20.0" right="30.0" top="5.0" />
+                     </VBox.margin>
+                  </TextField>
+      						<Button fx:id="valider" layoutX="30.0" layoutY="218.0" onAction="#submitOeuvre" text="Valider">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+            </VBox>
+            <VBox prefHeight="200.0" prefWidth="600.0">
+               <children>
+                  <Label text="Morceau">
+                     <VBox.margin>
+                        <Insets left="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField>
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Region prefHeight="19.0" prefWidth="400.0" />
+                  <Label text="Durée">
+                     <VBox.margin>
+                        <Insets left="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField>
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Button fx:id="valider1" onAction="#submitOeuvre" text="Ajouter le morceau">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" top="20.0" />
+                     </VBox.margin>
+                  </Button>
+                  <TableView prefHeight="200.0" prefWidth="200.0">
+                    <columns>
+                      <TableColumn prefWidth="197.0" text="Morceau" />
+                      <TableColumn minWidth="0.0" prefWidth="168.0" text="Durée" />
+                    </columns>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </TableView>
+               </children>
+            </VBox>
          </children>
-      </VBox>
+      </HBox>
+      
+
    </content>
 </ScrollPane>
