--- a/src/main/resources/modOeuvre.fxml
+++ b/src/main/resources/modOeuvre.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane hbarPolicy="ALWAYS" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="600.0" prefWidth="900.0" vbarPolicy="ALWAYS" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModOeuvreController">
+<ScrollPane hbarPolicy="ALWAYS" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="400.0" prefWidth="900.0" vbarPolicy="ALWAYS" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModOeuvreController">
    <content>
       <HBox prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
@@ -153,16 +153,24 @@
                         <Insets left="20.0" right="20.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField fx:id="plateformeInput" layoutX="10.0" layoutY="187.0" prefHeight="31.0" prefWidth="361.0">
+                  <TextField fx:id="plateformeInput" layoutX="10.0" layoutY="187.0" prefHeight="31.0" prefWidth="361.0" visible="false">
                      <VBox.margin>
                         <Insets bottom="5.0" left="20.0" right="30.0" top="5.0" />
                      </VBox.margin>
                   </TextField>
-      						<Button fx:id="valider" layoutX="30.0" layoutY="218.0" text="Valider">
+                  <HBox>
                      <VBox.margin>
                         <Insets left="20.0" right="20.0" />
                      </VBox.margin>
-                  </Button>
+                     <children>
+            						<Button fx:id="btnValider" text="Valider" />
+                        <Button fx:id="btnSupprimer" mnemonicParsing="false" onAction="#deleteOeuvre" text="Supprimer">
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
                </children>
             </VBox>
             <VBox prefHeight="200.0" prefWidth="600.0">
@@ -172,7 +180,7 @@
                         <Insets left="20.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField fx:id="morceau">
+                  <TextField fx:id="nameMorceau">
                      <VBox.margin>
                         <Insets left="20.0" right="20.0" />
                      </VBox.margin>
@@ -183,20 +191,28 @@
                         <Insets left="20.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField>
+                  <TextField fx:id="dureeMorceau">
                      <VBox.margin>
                         <Insets left="20.0" right="20.0" />
                      </VBox.margin>
                   </TextField>
-                  <Button fx:id="valider1" text="Modifier le morceau">
+                  <HBox>
                      <VBox.margin>
                         <Insets left="20.0" right="20.0" top="20.0" />
                      </VBox.margin>
-                  </Button>
-                  <TableView fx:id="TableMorceau" prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="btnModifierMorceau" onAction="#modifyMorceau" text="Modifier le morceau" />
+                        <Button fx:id="btnAjouterMorceau" mnemonicParsing="false" onAction="#ajouterMorceau" text="Ajouter">
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
+                  <TableView fx:id="morceauxTable" onMouseClicked="#updateInputMorceau" prefHeight="200.0" prefWidth="200.0">
                     <columns>
-                      <TableColumn prefWidth="197.0" text="Morceau" />
-                      <TableColumn minWidth="0.0" prefWidth="168.0" text="Durée" />
+                      <TableColumn fx:id="nameColumn" prefWidth="197.0" text="Morceau" />
+                      <TableColumn fx:id="dureeColumn" minWidth="0.0" prefWidth="168.0" text="Durée" />
                     </columns>
                      <VBox.margin>
                         <Insets top="10.0" />
