--- a/src/main/resources/ficheOeuvre.fxml
+++ b/src/main/resources/ficheOeuvre.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane hbarPolicy="ALWAYS" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="600.0" prefWidth="900.0" vbarPolicy="ALWAYS" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FicheOeuvreController">
+<ScrollPane hbarPolicy="ALWAYS" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="600.0" prefWidth="900.0" vbarPolicy="ALWAYS" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FicheOeuvreController">
    <content>
       <HBox BorderPane.alignment="CENTER">
          <children>
@@ -161,7 +161,7 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label fx:id="plateformeO" text="PlateformeO">
+                  <Label fx:id="noteO" text="PlateformeO">
                      <VBox.margin>
                         <Insets left="10.0" />
                      </VBox.margin>
@@ -174,7 +174,7 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label fx:id="commentO" text="CommentO">
+                  <Label fx:id="plateformeO" text="CommentO">
                      <VBox.margin>
                         <Insets left="10.0" />
                      </VBox.margin>
@@ -187,7 +187,7 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label fx:id="noteO" text="NoteO">
+                  <Label fx:id="commentO" text="NoteO">
                      <VBox.margin>
                         <Insets left="10.0" />
                      </VBox.margin>
