--- a/src/main/resources/rechercheAvancee.fxml
+++ b/src/main/resources/rechercheAvancee.fxml
@@ -62,13 +62,13 @@
                         </AnchorPane>
                      </content>
                   </TitledPane>
-                  <TitledPane animated="false" text="Recherche par genre">
+                  <TitledPane animated="false" text="Recherche par date">
                      <content>
                         <AnchorPane>
                            <children>
                               <HBox layoutX="7.0" layoutY="6.0" prefHeight="100.0" prefWidth="200.0">
                                  <children>
-                                    <Label prefHeight="16.0" prefWidth="85.0" text="Genre" />
+                                    <Label prefHeight="16.0" prefWidth="85.0" text="Date" />
                                     <VBox prefHeight="200.0" prefWidth="100.0">
                                        <children>
                                           <TextField fx:id="inputBegin" />
